--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,4 +1,4 @@
-name: qSelectionAPI
+name: qSelectionUI
 version: '${project.version}'
-main: gg.quartzdev.qselectionapi.qSelectionAPI
+main: gg.quartzdev.qselectionui.qSelectionUI
 api-version: '1.20'
